// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plurals-already-in-sync:locales/de.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick: brick en,
        brick_plural: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        other_one: other one de,
        other_value: other two de,
        value: value de,
        value_plural: values de
    },
    remove: {
    },
    replace: {
        book: book de,
        book_plural: books de,
        keep_one: one de,
        keep_two: two de
    }
}"
`;

exports[`plurals-already-in-sync:locales/en.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick: brick en,
        brick_plural: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        other_one: other one en,
        other_value: other two en,
        value: value en,
        value_plural: values en
    },
    remove: {
    },
    replace: {
        book: book en,
        book_plural: books en,
        keep_one: one en,
        keep_two: two en
    }
}"
`;

exports[`plurals-already-in-sync:locales/ja.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick: bricks ja,
        not_plural_x: not a plural
    },
    keep: {
        other_one: other one ja,
        other_value: other two ja,
        value: values ja
    },
    remove: {
    },
    replace: {
        book: books ja,
        keep_one: one ja,
        keep_two: two ja
    }
}"
`;

exports[`plurals-already-in-sync:locales/ru.json 1`] = `
"{
    add: {
        also_not_0_x: also not a plural,
        brick_0: bricks en,
        brick_1: bricks en,
        brick_2: bricks en,
        not_plural_x: not a plural
    },
    keep: {
        other_one: other one ru,
        other_value: other two ru,
        value_0: values ru 0,
        value_1: values ru 1,
        value_2: values ru 2
    },
    remove: {
    },
    replace: {
        book_0: books en,
        book_1: books en,
        book_2: books en,
        keep_one: one ru,
        keep_two: two ru
    }
}"
`;

exports[`plurals-already-in-sync:stderr.txt 1`] = `""`;

exports[`plurals-already-in-sync:stdout.txt 1`] = `""`;
